--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ opt-level = 1
 
 [dependencies]
 bevy = "0.8"
+bevy_rapier3d = { version = "0.16.1", features = [ "simd-stable", "debug-render" ] }
+bevy-inspector-egui = "0.12.1"
