--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ opt-level = 3
 [profile.dev]
 opt-level = 1
 
+# see: https://github.com/bevyengine/bevy/issues/5426#issuecomment-1227275839
+[patch.crates-io]
+wgpu = { git = "https://github.com/mockersf/wgpu/", branch = "unconditional-clear-workaround" }
+
 [dependencies]
 bevy = "0.8"
 bevy_rapier3d = { version = "0.16.1", features = [ "simd-stable", "debug-render" ] }
